<resources>
    <string name="app_name">TP Moviles-Servicios</string>

    <!--Main activity -->
    <string name="que_queres_hacer">¿Qué querés hacer?</string>

    <string name="ver_catalogo">Ver catálogo</string>
    <string name="buscar_vinilo">Buscar un vinilo</string>
    <string name="sobre_nosotros">Sobre nosotros</string>

    <!--Sobre nosotros activity -->
    <string name="info_sobre_nosotros">TP realizado como final de las materias \"Introducción a la programación de dispositivos moviles\" y \"Computación orientada a servicios\"</string>
    <string name="cynthia_romina_marin">Cynthia Romina Marin</string>
    <string name="mauro_sarti">Mauro Sarti</string>

    <!--Card activity -->
    <string name="nombre_points">Nombre: </string>
    <string name="color_points">Color: </string>
    <string name="codigo_points">Código: </string>
    <string name="precio_points">Precio: </string>

    <!--GetVinilo Dialog -->
    <string name="ingrese_codigo">INGRESE EL CÓDIGO</string>
    <string name="codigo">Código</string>
    <string name="buscar">Buscar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar">Cerrar</string>
    <string name="no_vacio">El código no puede estar vacío</string>

    <!--Toasts -->
    <string name="no_hay_elementos">No hay elementos para mostrar</string>
    <string name="no_existe_elemento">No existe ese elemento</string>
    <string name="no_hay_internet">Se necesita internet para esta acción</string>

</resources>
