<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_10sp"
    android:paddingBottom="@dimen/margin_10sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_codigo"
        style="@style/DialogTitle"/>

    <EditText
        android:id="@+id/edt_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/codigo"
        android:inputType="number"
        android:textColorLink="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="@dimen/margin_0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancelar"/>

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="@dimen/margin_0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buscar"/>

    </LinearLayout>

    <include layout="@layout/card"
        android:id="@+id/card"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar"
        android:visibility="gone"/>
</LinearLayout>