<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_15sp"
    android:paddingLeft="@dimen/margin_15sp"
    android:paddingRight="@dimen/margin_15sp"
    android:paddingTop="@dimen/margin_15sp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que_queres_hacer"
        android:textAlignment="center"
        android:textSize="@dimen/main_title_size"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btnVerCatalogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_120sp"
        android:text="@string/ver_catalogo" />

    <Button
        android:id="@+id/btnBuscarVinilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar_vinilo" />

    <Button
        android:id="@+id/btnSobreNosotros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_150sp"
        android:text="@string/sobre_nosotros" />

</LinearLayout>